# soap-notes-eval

./: .gitattributes  .gitignore  CLAUDE.MD  README.md  pyproject.toml
data/eval_set/: adesouza_000.json  adesouza_001.json  adesouza_002.json  adesouza_003.json  adesouza_004.json  adesouza_005.json  adesouza_006.json  adesouza_007.json  adesouza_008.json  adesouza_009.json  manifest.json  omi_000.json  omi_001.json  omi_002.json  omi_003.json  omi_004.json  omi_005.json  omi_006.json  omi_007.json  omi_008.json  omi_009.json
data/eval_set/degraded/: adesouza_000_hallucinated_entities.json  adesouza_000_internal_contradiction.json  adesouza_000_missing_section.json  adesouza_000_omitted_findings.json  adesouza_000_redundancy_bloat.json  adesouza_000_structural_errors.json  adesouza_001_hallucinated_entities.json  adesouza_001_internal_contradiction.json  adesouza_001_missing_section.json  adesouza_001_omitted_findings.json  (+75 more)
data/samples/: aci_000.json  aci_001.json  aci_002.json  adesouza_000.json  adesouza_001.json  adesouza_002.json  download.py  generate_degraded.py  manifest.json  omi_000.json  omi_001.json  omi_002.json
docs/: AI_SOAP_NOTE_GENERATION_RESEARCH.md  ASSESSMENT.md  DATA_PREPARATION.md  DESIGN_RESEARCH_AND_DECISIONS.md  EVALUATING_LLM_JUDGE_RESEARCH.md  STRATEGY.md
output/: tier1_sample_report.json
prompts/: manifest.json  tier2_judge_v001.md
scripts/: emit_tier1_report.py  emit_tier2_report.py
src/: config.py
src/data/: loaders.py  models.py
src/meta_eval/: agreement.py  calibrate.py
src/tier1/: entities.py  pipeline.py  structure.py
src/tier2/: judge.py  schemas.py
src/tier3/: app.py  models.py
tests/: conftest.py  test_meta_eval.py  test_tier1.py  test_tier2.py
(+32 files in other folders)
